--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ url                      : https://comp-mol-biol.github.io # the base hostname &
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "github.com/comp-mol-biol"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
-breadcrumbs              : true # true, false (default)
+breadcrumbs              : false # true, false (default)
 words_per_minute         : 200
 future                   : true
 read_more                : "enabled" # if enabled, adds "Read more" links to excerpts
